--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1"
   }
 }
