--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1"
