--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "prisma": "^5.12.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   },
